[feat] read code